--- a/.dist.env
+++ b/.dist.env
@@ -12,8 +12,8 @@ PGADMIN_DEFAULT_PASSWORD=
 # redis settings
 REDIS_HOST=
 REDIS_PORT=
-REDIS_VERSION=
-REDIS_URL=
+REDIS_VERSION=latest
+REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/0
 
 # jwt
 SECRET_KEY=
