feat: add fetch_latest_blocks async task, add BlockchainService class, fix dotenv variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,7 +50,7 @@ services:
     build: .
     container_name: celery-worker
     working_dir: /app/src
-    command: ["celery", "-A", "django_app.core.celery_app", "worker", "--loglevel=info"]
+    command: ["celery", "-A", "django_app.core.celery_app", "worker", "--loglevel=info", "--concurrency=2"]
     restart: always
     depends_on:
       - redis
