--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "django-timezone-field (>=7.1,<8.0)",
     "django-celery-beat (>=2.7.0,<3.0.0)",
     "redis (>=5.2.1,<6.0.0)",
+    "djangorestframework (>=3.15.2,<4.0.0)",
 ]
 
 
